# pheroes-sim

./: .gitignore  README.md  pyproject.toml  tuning.md
build_backend/: backend.py
docs/: 01-analysis.md  obstacles-feature-results.md  strategy-q.md  tournament.md
docs/superpowers/specs/: 2026-04-06-strategy-q-improvements-design.md
examples/: player1_ai.json  player2_ai.json  scenario_basic.json
examples/creatures/: core.json
examples/scenario_sets/core/: scenario_01_balanced_line.json  scenario_02_balanced_wide.json  scenario_03_balanced_compact.json  scenario_04_balanced_shooters.json  scenario_05_balanced_flyers.json  scenario_06_balanced_slow_clash.json  scenario_07_balanced_mixed.json  scenario_08_balanced_close_range.json  scenario_09_asymmetric_shooter_edge.json  scenario_10_asymmetric_flyer_edge.json  scenario_11_wall_corridor.json  scenario_12_rocks_shooters.json  scenario_13_wall_los.json
src/pheroes_sim/: __init__.py  batching.py  cli.py  engine.py  hexgrid.py  io.py  models.py  rendering.py  strategies.py  strategy_core.py
src/pheroes_sim/strategies/: __init__.py  random.py  strategy_q.py  weighted_a.py  weighted_b.py
src/sim_matter/: cli.py  engine.py  hexgrid.py  io.py  models.py  rendering.py  rewards.py
tests/: test_batching.py  test_cli.py  test_engine.py  test_hexgrid.py  test_io.py  test_obstacles.py  test_players.py  test_rendering.py  test_strategy_q.py
