[project]
name = "pheroes-sim"
version = "0.1.0"
description = "Fast tactical hex-grid battle simulator inspired by Heroes-style combat."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pheroes-sim = "sim_matter.cli:main"

[build-system]
requires = []
build-backend = "backend"
backend-path = ["build_backend"]

[tool.uv]
cache-dir = ".uv-cache"
